--- a/css/customGallery.css
+++ b/css/customGallery.css
@@ -139,7 +139,7 @@ body {
 .main-content {
     background-color: #000;
     padding-bottom: 200px;
-    margin-top: 250px;
+    padding-top: 250px;
 }
 
 .header-section .title-line {
